--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset='utf-8'>
-  <title>My_page</title>
-  <style>
+  <head>
+    <meta charset="utf-8">
+
+    <title>Number guessing game</title>
+
+    <style>
       html {
         font-family: sans-serif;
       }
@@ -20,9 +22,10 @@
         padding: 3px;
       }
     </style>
-</head>
-<body>
-  <h1>Number guessing game</h1>
+  </head>
+
+  <body>
+    <h1>Number guessing game</h1>
 
     <p>We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.</p>
 
@@ -115,6 +118,5 @@
 		randomNumber = Math.floor(Math.random() * 100) + 1;
 	}
     </script>
-  <button>
-</body>
+  </body>
 </html>
